$Id$

BCH:
- fixing 'WriteAndAdjust' bug.

BROKER:
- adapting to 'LST' modifications.

CLNARG:
- Adding the 'Parameter' parameter to 'PrintOptionUsage'.

EPSMSC:
- Update.

GNUMLL:
- Adapting to 'CTN', 'MMM', 'BSO', 'TXMPGH' modifications.
- Using 'EPEIOS' stuff.
- Move all 'operator <<' from inside namespace to outside, because I had trouble with linking.

STF: 
- Take away all the internal 'EOT' stuff. Using the standard 'EOD' instead.

TAGEXP:
- Adapting to changes in 'STF'.

TSRCPR:
- Correcting '#define' bogue.

TXMPGH:
- Introducing namespace.
- Adapting to namespace use in 'CTN', 'STR' and 'BSO'.
- Using 'EPEIOS' stuff.

XTF:
- Correct a bug due to a missing 'EOX()' in 'GetLine()'.


20040501
Creation